# Movie-Database-Qt

./: CMakeLists.txt  README.md  main.cpp
GUI/: GraphGUI.cpp  GraphGUI.h  MovieTableModel.cpp  MovieTableModel.h  MovieTableView.cpp  MovieTableView.h  adminGUI.cpp  adminGUI.h  mainGUI.cpp  mainGUI.h  userGUI.cpp  userGUI.h
Testing/: tests.cpp  tests.h
UI/: UI.cpp  UI.h
Validator/: Validator.cpp  Validator.h
domain/: Movie.cpp  Movie.h
repo/: CSVRepo.cpp  CSVRepo.h  DefaultRepo.cpp  DefaultRepo.h  HTMLRepo.cpp  HTMLRepo.h  IRepo.cpp  IRepo.h  SQLRepo.cpp  SQLRepo.h
resources/: movies.txt  user.csv  user.html  usermovies.txt
service/: Command.cpp  Command.h  ICommand.cpp  ICommand.h  Service.cpp  Service.h
